@@ -7,16 +7,17 @@ copyright_year   = 2015
 [@Basic]
 
 [Prereqs]
-Convert::Base32    = 0
-Crypt::Blowfish    = 0
-Crypt::CBC         = 0
-Crypt::Rijndael    = 0
-Digest::HMAC_SHA1  = 0
-Digest::MD5        = 0
-JSON               = 0
-POSIX              = 0
-String::Random     = 0
-Term::ReadPassword = 0
+Convert::Base32           = 0
+Crypt::Blowfish           = 0
+Crypt::CBC                = 0
+Crypt::Rijndael           = 0
+Digest::HMAC_SHA1         = 0
+Digest::MD5               = 0
+JSON                      = 0
+POSIX                     = 0
+String::Random            = 0
+Term::ReadPassword        = 0
+Term::ReadPassword::Win32 = 0
 
 [Prereqs / TestRequires]
 Devel::Cover              = 0
